Fixed lightbox icon sizing and alignment pt 2

--- a/scss/components/_lightbox.scss
+++ b/scss/components/_lightbox.scss
@@ -118,14 +118,8 @@ $background_color_3: #fff;
   position: absolute;
   top: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  width: 20px;
-  height: 34px;
-  padding: 40px 30px;
-=======
   height: auto;
   width: auto;
->>>>>>> Stashed changes
   margin: auto;
   cursor: pointer;
   opacity: 0.7;
